--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,19 @@
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2 mb-2 mt-12">
         <%- include('header') %>
-        <p class="py-2"> Welcome to the Complaint Management System </p>
-        <p class="py-2"> Employees at IOCL, Please </p> <a href="/signup" class="text-green-600">Click Here</a></p>
-        <p class="py-2"> If you are Vendor, and New to this portal? <a href="/signup" class="text-green-600">Sign-up</a></p>
-        <p class="py-2"> Already have an Vendor account? <a href="/login" class="text-green-600">Login</a></p>
+        <p class="py-2">Welcome to the Complaint Management System</p>
+        <p class="py-2">
+          Employees at IOCL, Please
+          <a href="/signup" class="text-green-600">Click Here</a>
+        </p>
+        <p class="py-2">
+          If you are Vendor, and New to this portal?
+          <a href="/vendor-signup" class="text-green-600">Sign-up</a>
+        </p>
+        <p class="py-2">
+          Already have an Vendor account?
+          <a href="/vendor-login" class="text-green-600">Login</a>
+        </p>
       </div>
       <div class="col-start-3 col-span-2"><%- include('footer') %></div>
     </div>
