dummy home page created

--- a/views/hrHome.ejs
+++ b/views/hrHome.ejs
@@ -11,13 +11,6 @@
       <div
         class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-aqua-50"
       >
-        <p class="ml-2 text-sm text-gray-600">Raise a Complaint</p>
-      </div>
-    </li>
-    <li class="Todo-Item">
-      <div
-        class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-aqua-50"
-      >
         <p class="ml-2 text-sm text-gray-600">Status</p>
       </div>
     </li>
@@ -25,16 +18,21 @@
       <div
         class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-aqua-50"
       >
-        <p class="ml-2 text-sm text-gray-600">
-          Accept or Reject the Vendor Response
-        </p>
+        <p class="ml-2 text-sm text-gray-600">Acknowledgement</p>
       </div>
     </li>
     <li class="Todo-Item">
       <div
         class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-aqua-50"
       >
-        <p class="ml-2 text-sm text-gray-600">Reopen</p>
+        <p class="ml-2 text-sm text-gray-600">Allocation to Vendor</p>
+      </div>
+    </li>
+    <li class="Todo-Item">
+      <div
+        class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-aqua-50"
+      >
+        <p class="ml-2 text-sm text-gray-600">Escalation</p>
       </div>
     </li>
   </ul>
