--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
   <body>
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2 mb-2 mt-12">
-        <%- include('header') %>
+        <%- include('partials/header') %>
         <p class="py-2">Welcome to the Complaint Management System</p>
         <p class="py-2">
           Employees at IOCL, Please
@@ -26,7 +26,9 @@
           <a href="/vendor-login" class="text-green-600">Login</a>
         </p>
       </div>
-      <div class="col-start-3 col-span-2"><%- include('footer') %></div>
+      <div class="col-start-3 col-span-2">
+        <%- include('partials/footer') %>
+      </div>
     </div>
   </body>
 </html>
